# hakim

./: .gitignore  404.html  CNAME  Cargo.toml  LICENSE_MIT  README.md  index.html  init-script.sh  main.js  package-lock.json
.github/workflows/: build_example_web.yml  preview.yml  rust.yml
docs/: parser.md  tactic.md  اجرا.md  نحوه ی نصب.md
front/: .gitignore  package.json  webpack.config.js  webpack.dev.config.js
front/adventure/: root.yml  tutorial.yml
front/src/: App.module.css  App.tsx  (+4 more)
hakim-cli/: Cargo.toml
hakim-engine/: Cargo.toml
hakim-engine/src/: analysis.rs  brain.rs  engine.rs  interactive.rs  lib.rs  library.rs  parser.rs  prelude.rs  search.rs
hakim-engine/src/analysis/: arith.rs  big_fraction.rs  logic.rs
hakim-engine/src/brain/: detect.rs  infer.rs  subtyping.rs  tests.rs
hakim-engine/src/engine/: interactive.rs  tactic.rs  tests.rs
hakim-engine/src/engine/tactic/: apply.rs  intros.rs  rewrite.rs  ring.rs
hakim-engine/src/interactive/: action_of_tactic.rs  history_auto.rs  monitor.rs  natural.rs  proof_tree.rs  suggest.rs  tactic.rs  tests.rs
hakim-engine/src/interactive/suggest/: goal.rs  hyp.rs  tests.rs
hakim-engine/src/interactive/tactic/: apply.rs  assumption.rs  auto_list.rs  auto_set.rs  chain.rs  hyps.rs  intros.rs  lia.rs  lra.rs  rewrite.rs  ring.rs  unfold.rs  z3_auto.rs
hakim-engine/src/parser/: ast.rs  binop.rs  pretty_print.rs  semantic_highlight.rs  span_counter.rs  tests.rs  tokenizer.rs  uniop.rs  wild.rs
hakim-engine/src/parser/pretty_print/: max_width.rs
hakim-engine/src/parser/tests/: ast_layer.rs
hakim-json/: Cargo.toml
hakim-server/: Cargo.toml
hakim-wasm/: Cargo.toml
scripts/: patch-emscripten.js
src/: brain.rs  engine.rs  main.rs  parser.rs
static/: enable-threads.js  hakim-json.js  hakim_json.wasm  hello.txt
(+76 files in other folders)
