[workspace]
resolver = "2"
members = [
    "hakim-engine",
    "hakim-cli",
    "hakim-wasm",
    "hakim-json",
    "hakim-server",
]

[profile.dev]
# These are needed to prevent timeout in tests
opt-level = 3

[profile.release.package.hakim-wasm]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
