[package]
name = "hakim-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = { package = "im-rc", version = "15.0.0", features = ["serde"] }
num-bigint = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive", "rc"] }
typed-arena = "2.0.1"
lazy_static = "1.2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
serde-wasm-bindgen = "0.4.2"
wasm-bindgen = { version = "0.2.63" }
