[package]
name = "hakim-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
im = { package = "im-rc", version = "15.0.0", features = ["serde"] }
num-bigint = { version = "0.4", features = ["serde"] }
regex = "1.9.3"
serde = { version = "1.0", features = ["derive", "rc"] }
typed-arena = "2.0.1"
lazy_static = "1.2.0"
minilp = { git = "https://github.com/HKalbasi/minilp" }
pretty = "0.11.3"
z3 = { git = "https://github.com/arshiamoeini/my_z3.git", optional = true, features = [
    "static-link-z3",
] }
z3-sys = { git = "https://github.com/arshiamoeini/my_z3.git", optional = true, features = [
    "static-link-z3",
] }

[features]
z3 = ["dep:z3", "dep:z3-sys"]

[dev-dependencies]
rayon = "1.6.0"
